reordered methods in results and updated swagger documentation
